--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "tailwindcss": "^3.4.4",
     "vite": "^4.1.0"
   },
   "dependencies": {
     "@vitejs/plugin-react": "3.1.0",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-transition-group": "^4.4.5",
